--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -1,3 +1,67 @@
 <footer class="footer">
-  <div class="container"></div>
+  <div class="container">
+    <div class="footer__block-info">
+      <div class="footer__info">
+        <img src="img/icons/logo.svg" alt="logo">
+        <a href="#">Карта сайта</a>
+        <p>2021 © LifeStroy.com</p>
+      </div>
+      <div class="footer__info">
+        <h4>услуги:</h4>
+        <div class="footer__info-services-block">
+          <div class="footer__info-services-block-left">
+            <p>Дизайн</p>
+            <p>Ремонт</p>
+            <p>Умный дом</p>
+          </div>
+          <div class="footer__info-services-block-right">
+            <p>Отопление</p>
+            <p>Комплектация</p>
+            <p>Котельная</p>
+          </div>
+        </div>
+      </div>
+      <div class="footer__info">
+        <h4>Контакты:</h4>
+        <div class="footer__info-phone">
+          <p>+7 (495) 150-45-75</p>
+          <p>+7 (495) 150-45-77</p>
+        </div>
+        <div class="footer__info-address">
+          <p>г. Красногорск, ул Успенская, д. 5
+            <br>(деловой центр успенский), оф. 510-2
+          </p>
+        </div>
+      </div>
+      <div class="footer__info">
+        <h4><a href="#">info@lifestroy.com</a></h4>
+        <div class="footer__info-social">
+          <p>Соц. сети:</p>
+          <img src="img/icons/instagram.svg" alt="instagram">
+          <img src="img/icons/facebook.svg" alt="facebook">
+          <img src="img/icons/youtube.svg" alt="youtube">
+        </div>
+        <button>Выпить кофе</button>
+      </div>
+    </div>
+  </div>
+  <div class="footer__bottom">
+    <div class="container">
+      <div class="footer__bottom-block">
+        <div class="footer__bottom-left">
+          <a href="#">Система оплаты:</a>
+          <div class="footer__bottom-left-card">
+            <img src="img/icons/visa.svg" alt="visa">
+            <img src="img/icons/mastercard.svg" alt="mastercard">
+            <img src="img/icons/bitcoin.svg" alt="bitcoin">
+            <img src="img/icons/ethereum.svg" alt="ethereum">
+          </div>
+        </div>
+        <div class="footer__bottom-right">
+          <a href="#">Политика сбора и обработки персональной информации</a>
+          <a href="#">Политика конфиденциальности</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </footer>
