--- a/#src/_services.html
+++ b/#src/_services.html
@@ -1,58 +1,92 @@
 <div class="services-block">
   <div class="container">
     <div class="services-block__main-row">
-      <div class="services-block__main-left-row">
-        <div class="services-block-left-content-left-side">
-          <div class="services-block-left-content-left-side__title">
-            <h3>Ремонт</h3>
-          </div>
-          <div class="services-block-left-content-left-side__text">
-            <p>
-              Качественный ремонт вторичного жилья с демонтажом устаревших
-              коммуникаций или дизайнерский ремонт в новостройке бизнес-класса —
-              все строго по дизайн-проекту и вашим пожеланиям.
+      <div class="services-block__main-left-side">
+        <div class="services-block-left-side-content">
+          <h3 class="services-block-left-side-content__title services-title">
+            Ремонт
+          </h3>
+          <p class="services-block-left-side-content__text services-text">
+            Качественный ремонт вторичного жилья с демонтажом устаревших
+            коммуникаций или дизайнерский ремонт в новостройке бизнес-класса —
+            все строго по дизайн-проекту и вашим пожеланиям.
+          </p>
+        </div>
+        <div class="services-block-left-side-content__img">
+          <img src="img/services-block01.png" alt="services-image" />
+        </div>
+      </div>
+      <div class="services-block__main-right-side">
+        <div class="services-block__right-side-body">
+          <div class="services-block-right-side-content">
+            <h3 class="services-block-right-side-content__title services-title">
+              Дизайн
+            </h3>
+            <p class="services-block-right-side-content__text services-text">
+              Разработка индивидуального проекта с фотореалистичной
+              3D-визуализацией — вы увидите будущий результат еще до начала
+              ремонтных работ.
             </p>
           </div>
+          <div class="services-block-right-side-content__img">
+            <img src="img/services-block02.png" alt="services-image" />
+          </div>
         </div>
-        <div class="services-block-left-content-right-side">
-          <div class="services-block-left-content-right-side__img">
-            <img src="img/services-block01.png" alt="services-block-img" />
+        <div class="services-block__right-side-body">
+          <div class="services-block-right-side-content">
+            <h3 class="services-block-right-side-content__title services-title">
+              Умный дом
+            </h3>
+            <p class="services-block-right-side-content__text services-text">
+              Интерактивное управление собственным домом уже реальность.
+            </p>
+          </div>
+          <div class="services-block-right-side-content__img">
+            <img src="img/services-block03.png" alt="services-image" />
           </div>
         </div>
       </div>
-      <div class="services-block__main-right">
-        <div class="services-block__right-content-row">
-          <div class="services-block-right-content-left-side">
-            <div class="services-block-right-content-left-side__title">
-              <h3>Дизайн</h3>
-            </div>
-            <div class="services-block-right-content-left-side__text">
-              <p>
-                Разработка индивидуального проекта с фотореалистичной
-                3D-визуализацией — вы увидите будущий результат еще до начала
-                ремонтных работ.
-              </p>
-            </div>
+    </div>
+    <div class="services-block-colums">
+      <div class="services-block-colums__row">
+        <div class="services-block-colums__body">
+          <div class="services-block-colums-content">
+            <h3 class="services-block-colums-content__title services-title">
+              Котельная
+            </h3>
+            <p class="services-block-colums-content__text services-text">
+              Подбор и монтаж современного оборудования для водоснабжения и
+              отопления
+            </p>
           </div>
-          <div class="services-block-right-content-right-side">
-            <div class="services-block-right-content-right-side__img">
-              <img src="img/services-block02.png" alt="services-block-img" />
-            </div>
+          <div class="services-block-colums-content__img">
+            <img src="img/services-block04.png" alt="services-image" />
           </div>
         </div>
-        <div class="services-block__right-content-row">
-          <div class="services-block-right-content-left-side">
-            <div class="services-block-right-content-left-side__title">
-              <h3>Умный дом</h3>
-            </div>
-            <div class="services-block-right-content-left-side__text">
-              <p>Интерактивное управление собственным домом уже реальность.</p>
-            </div>
+        <div class="services-block-colums__body">
+          <div class="services-block-colums-content">
+            <h3 class="services-block-colums-content__title services-title">
+              Комплектация
+            </h3>
+            <p class="services-block-colums-content__text services-text">
+              Найдем для вас лучшее предложение по цене и качеству.
+            </p>
           </div>
-          <div class="services-block-right-content-right-side">
-            <div class="services-block-right-content-right-side__img">
-              <img src="img/services-block03.png" alt="services-block-img" />
-            </div>
+          <div class="services-block-colums-content__img">
+            <img src="img/services-block05.png" alt="services-image" />
+          </div>
+        </div>
+        <div class="services-block-colums__body">
+          <div class="services-block-colums-content">
+            <h3 class="services-block-colums-content__title services-title">
+              Отопление
+            </h3>
+            <p class="services-block-colums-content__text services-text">
+              Подберем надежное оборудование с учетом площади комнат.
+            </p>
+          </div>
+          <div class="services-block-colums-content__img">
+            <img src="img/services-block06.png" alt="services-image" />
           </div>
         </div>
       </div>
