--- a/#src/index.html
+++ b/#src/index.html
@@ -6,7 +6,7 @@
       <div class="home-bg-wrapper">
         @@include("_header.html") @@include("_home.html")
       </div>
-      @@include("_services.html")
+      @@include("_services.html") @@include("_design.html")
       <main class="page"></main>
       @@include("_footer.html")
     </div>
