--- a/#src/index.html
+++ b/#src/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  @@include("_head.html")
-  <body>
-    <div class="wrapper">
-      <div class="home-bg-wrapper">
-        @@include("_header.html") @@include("_home.html")
-      </div>
-      @@include("_services.html")
-      <main class="page"></main>
-      @@include("_footer.html")
+@@include("_head.html")
+
+<body>
+  <div class="wrapper">
+    <div class="home-bg-wrapper">
+      @@include("_header.html") @@include("_home.html")
     </div>
-    @@include("_js.html")
-  </body>
+    @@include("_services.html")
+    <main class="page">
+      @@include("_location.html")
+    </main>
+    @@include("_footer.html")
+  </div>
+  @@include("_js.html")
+</body>
+
 </html>
