add html/ccs layout for design block

--- a/#src/_design.html
+++ b/#src/_design.html
@@ -1,1 +1,76 @@
-<div class="design-block"></div>
+<div class="design-block">
+  <div class="container">
+    <div class="design-block__title content-title">
+      <h2>Продуманный дизайн в качественном исполнении</h2>
+    </div>
+    <div class="design-block__main-row">
+      <div class="design-block-left">
+        <div class="design-block-left__body">
+          <div class="design-block__img">
+            <img src="img/design-block01.png" alt="design-img01" />
+          </div>
+          <div class="design-block__adress">
+            <p class="design-block__adress-text">ул. Родниковая, г.Москва</p>
+            <p class="design-block__adress-price">Цена ремонта</p>
+          </div>
+          <div class="design-block__description">
+            <p class="design-block__description-adress">
+              Ремонт в ЖК Сердце Столицы
+            </p>
+            <p class="design-block__description-price">4,5 млн руб</p>
+          </div>
+        </div>
+        <div class="design-block-left__body">
+          <div class="design-block__img">
+            <img src="img/design-block02.png" alt="design-img01" />
+          </div>
+          <div class="design-block__adress">
+            <p class="design-block__adress-text">ул. Родниковая, г.Москва</p>
+            <p class="design-block__adress-price">Цена ремонта</p>
+          </div>
+          <div class="design-block__description">
+            <p class="design-block__description-adress">
+              Ремонт в ЖК Сердце Столицы
+            </p>
+            <p class="design-block__description-price">4,5 млн руб</p>
+          </div>
+        </div>
+      </div>
+      <div class="design-block-right">
+        <div class="design-block-right__body">
+          <div class="design-block__img">
+            <img src="img/design-block03.png" alt="design-img01" />
+          </div>
+          <div class="design-block__adress">
+            <p class="design-block__adress-text">ул. Родниковая, г.Москва</p>
+            <p class="design-block__adress-price">Цена ремонта</p>
+          </div>
+          <div class="design-block__description">
+            <p class="design-block__description-adress">
+              Ремонт в ЖК Сердце Столицы
+            </p>
+            <p class="design-block__description-price">4,5 млн руб</p>
+          </div>
+        </div>
+        <div class="design-block-right__body">
+          <div class="design-block__img">
+            <img src="img/design-block04.png" alt="design-img01" />
+          </div>
+          <div class="design-block__adress">
+            <p class="design-block__adress-text">ул. Родниковая, г.Москва</p>
+            <p class="design-block__adress-price">Цена ремонта</p>
+          </div>
+          <div class="design-block__description">
+            <p class="design-block__description-adress">
+              Ремонт в ЖК Сердце Столицы
+            </p>
+            <p class="design-block__description-price">4,5 млн руб</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="design-block__btn btn-primary">
+      <a href="#">Портфолио</a>
+    </div>
+  </div>
+</div>
