add benefits/price block html-css layout // no-responsive

--- a/#src/_design.html
+++ b/#src/_design.html
@@ -10,61 +10,85 @@
             <img src="img/design-block01.png" alt="design-img01" />
           </div>
           <div class="design-block__adress">
-            <p class="design-block__adress-text">ул. Родниковая, г.Москва</p>
-            <p class="design-block__adress-price">Цена ремонта</p>
+            <div class="design-block__adress-text">
+              <p>ул. Родниковая, г.Москва</p>
+            </div>
+            <div class="design-block__adress-price">
+              <p>Цена ремонта</p>
+            </div>
           </div>
           <div class="design-block__description">
-            <p class="design-block__description-adress">
-              Ремонт в ЖК Сердце Столицы
-            </p>
-            <p class="design-block__description-price">4,5 млн руб</p>
+            <div class="design-block__description-adress">
+              <p>Ремонт в ЖК Сердце Столицы</p>
+            </div>
+            <div class="design-block__description-price">
+              <p>4,5 млн руб</p>
+            </div>
           </div>
         </div>
         <div class="design-block-left__body">
           <div class="design-block__img">
-            <img src="img/design-block02.png" alt="design-img01" />
+            <img src="img/design-block02.png" alt="design-img02" />
           </div>
           <div class="design-block__adress">
-            <p class="design-block__adress-text">ул. Родниковая, г.Москва</p>
-            <p class="design-block__adress-price">Цена ремонта</p>
+            <div class="design-block__adress-text">
+              <p>ул. Родниковая, г.Москва</p>
+            </div>
+            <div class="design-block__adress-price">
+              <p>Цена ремонта</p>
+            </div>
           </div>
           <div class="design-block__description">
-            <p class="design-block__description-adress">
-              Ремонт в ЖК Сердце Столицы
-            </p>
-            <p class="design-block__description-price">4,5 млн руб</p>
+            <div class="design-block__description-adress">
+              <p>Ремонт в ЖК Сердце Столицы</p>
+            </div>
+            <div class="design-block__description-price">
+              <p>4,5 млн руб</p>
+            </div>
           </div>
         </div>
       </div>
       <div class="design-block-right">
         <div class="design-block-right__body">
           <div class="design-block__img">
-            <img src="img/design-block03.png" alt="design-img01" />
+            <img src="img/design-block03.png" alt="design-img03" />
           </div>
           <div class="design-block__adress">
-            <p class="design-block__adress-text">ул. Родниковая, г.Москва</p>
-            <p class="design-block__adress-price">Цена ремонта</p>
+            <div class="design-block__adress-text">
+              <p>ул. Родниковая, г.Москва</p>
+            </div>
+            <div class="design-block__adress-price">
+              <p>Цена ремонта</p>
+            </div>
           </div>
           <div class="design-block__description">
-            <p class="design-block__description-adress">
-              Ремонт в ЖК Сердце Столицы
-            </p>
-            <p class="design-block__description-price">4,5 млн руб</p>
+            <div class="design-block__description-adress">
+              <p>Ремонт в ЖК Сердце Столицы</p>
+            </div>
+            <div class="design-block__description-price">
+              <p>4,5 млн руб</p>
+            </div>
           </div>
         </div>
         <div class="design-block-right__body">
           <div class="design-block__img">
-            <img src="img/design-block04.png" alt="design-img01" />
+            <img src="img/design-block04.png" alt="design-img04" />
           </div>
           <div class="design-block__adress">
-            <p class="design-block__adress-text">ул. Родниковая, г.Москва</p>
-            <p class="design-block__adress-price">Цена ремонта</p>
+            <div class="design-block__adress-text">
+              <p>ул. Родниковая, г.Москва</p>
+            </div>
+            <div class="design-block__adress-price">
+              <p>Цена ремонта</p>
+            </div>
           </div>
           <div class="design-block__description">
-            <p class="design-block__description-adress">
-              Ремонт в ЖК Сердце Столицы
-            </p>
-            <p class="design-block__description-price">4,5 млн руб</p>
+            <div class="design-block__description-adress">
+              <p>Ремонт в ЖК Сердце Столицы</p>
+            </div>
+            <div class="design-block__description-price">
+              <p>4,5 млн руб</p>
+            </div>
           </div>
         </div>
       </div>
