--- a/#src/index.html
+++ b/#src/index.html
@@ -6,13 +6,13 @@
       <div class="home-bg-wrapper">
         @@include("_header.html") @@include("_home.html")
       </div>
-    <main class="page">
-       @@include("_services.html") @@include("_design.html")
-      @@include("_location.html")
-    </main>
-    @@include("_footer.html")
-  </div>
-  @@include("_js.html")
-</body>
-
+      <main class="page">
+        @@include("_services.html") @@include("_design.html")
+        @@include("_price.html") @@include("_benefits.html")
+        @@include("_location.html")
+      </main>
+      @@include("_footer.html")
+    </div>
+    @@include("_js.html")
+  </body>
 </html>
