--- a/#src/index.html
+++ b/#src/index.html
@@ -9,7 +9,7 @@
       <main class="page">
         @@include("_services.html") @@include("_design.html")
         @@include("_price.html") @@include("_benefits.html")
-        @@include("_location.html")
+        @@include("_calculate.html") @@include("_location.html")
       </main>
       @@include("_footer.html")
     </div>
